zeit.cms changes
================

1.6 (unreleased)
----------------

- WYSIWYG-Editor: Formular zum Bild-Bearbeiten vereinfacht (Bug #4170).

1.5 (2008-11-20)
----------------

- Sicherheitsrichtlinien (securitypolicy)  ist aus dem Kern in ein separates
  Paket gewandert. Das sorgt für mehr Flexibilität.
- Permission-Deklaration für den Kalender entfernt (Bug #4511).

1.4 (2008-11-18)
----------------

- Bigas: Das Bild linkt jetzt zum Bearbeiten. Zum Bild kommt man mit dem
  Extralink »Bild zeigen«.
- Bigas: Die Bildunterschriften in den <image>- und <thumbnail>-Tags wurden
  auch nach dem »Synchronisieren« nicht aktualisiert. Unberührt bleibt hiervon
  das <caption>-Tag. (Bug #4530)
- Biga: Neues Layout »hidden« für die Bilder. Dies erlaubt das Ausblenden von
  nicht benötigten Bildern.
- Previews von ausgecheckten Dokumenten werden jetzt im Verzeichnis des
  Ursprungsobjekts erzeugt. Damit können contextabhängige Styles angesehen
  werden (v.a. Zuender). (Bug #4311)
- Löschen funktioniert wieder.
 	

1.3 (2008-11-17)
----------------

- WYSIWYG-Editor: Formular für das Hinzufügen und Bearbeiten von Videos;
  unterstützen des <video>-Tags incl. expires-Attribut.
- WYSIWYG-Editor: Aktion für das Hinzufügen eines Mail-Formulars.
- Lightbox-Formulare: Nach dem ersten Submit wurden die Handler nicht
  aufgesetzt, so dass ein zweiter Submit nicht (korrekt) funktionierte.
  Unterstütung für Checkboxen.
- Massenänderung der Copyrights aller Bilder in einem Ordner.
- Bei Verlinkungen (z.B. Assets) wird jetzt ein größerer Tooltip angezeigt
  (beil Bildern auch mit Bild).


1.2.7 (2008-11-10)
------------------

- Übersetzungen korrigiert.

1.2.6 (2008-11-10)
------------------

- Syndizieren mit gleichzeitigem verstecken auf der Homepage (bug #4521).

1.2.5 (2008-10-29)
------------------

- Keywords werden alle 5 Minuten neu geladen (Bug #4501).
- SEO aus dem Kern entfernt.

1.2.4 (2008-10-24)
------------------
