@@ -1,0 +1,7 @@
+.widget {
+    margin-bottom: 1em;
+}
+
+label {
+    display: block;
+}
