@@ -5,6 +5,7 @@ zeit.cms changes
 ----------------
 
 - WYSIWYG-Editor: Formular zum Bild-Bearbeiten vereinfacht (Bug #4170).
+- WYSIWYG-Editor: Neues Feld »Format« im Video-Dialog.
 
 1.5 (2008-11-20)
 ----------------
